--- a/src/express/templates/layout/layout.pug
+++ b/src/express/templates/layout/layout.pug
@@ -7,5 +7,5 @@ html(lang=`ru`)
       include ./header
       block content
       include ./footer
-      //script(src='/js/vendor.js')
-      //script(src='/js/main.js')
+      script(src='/js/vendor.js')
+      script(src='/js/main.js')
