Update api & layout, add hot articles

--- a/src/express/templates/common/head.pug
+++ b/src/express/templates/common/head.pug
@@ -2,6 +2,7 @@ head
   meta(charset=`utf-8`)
   meta(name=`viewport` content=`width=device-width,initial-scale=1`)
   meta(name=`Description` content=`Личный блог Типотека`)
+  meta(http-equiv='X-UA-Compatible' content='ie=edge')
   title Типотека
   link(rel=`preload` href=`/fonts/Inter-Regular.woff2` as=`font` crossorigin=`anonymous`)
   link(rel=`preload` href=`/fonts/Inter-Medium.woff2` as=`font` crossorigin=`anonymous`)
