--- a/src/express/templates/layout/layout.pug
+++ b/src/express/templates/layout/layout.pug
@@ -2,6 +2,16 @@ doctype html
 html(lang=`ru`)
   include ../common/head
   body
+    -
+      const truncate = (str, n, useWordBoundary) => {
+        if (str.length <= n) {
+          return str;
+        }
+        const subString = str.substring(0, n - 1).trim();
+        return `${(useWordBoundary
+                ? subString.substring(0, (subString.lastIndexOf(``)))
+                : subString)}${subString.endsWith(`.`) ? `` : `...`}`;
+      };
     // TODO add dynamic wrapper color
     .wrapper
       include ./header
