Add latest comments to main

--- a/src/express/templates/pages/main.pug
+++ b/src/express/templates/pages/main.pug
@@ -16,50 +16,29 @@ block content
     if articles.length
       div(class=`main-page__section-flex ${hotArticles.length ? `` : `main-page__section-flex--short`}`)
         section.main-page__hot.hot
+          h2(class=`hot__name ${hotArticles.length ? `` : `hot__name--empty`}`)
+            | Самое обсуждаемое
+            span.hot__icon.hot__icon--fire
           if hotArticles.length
-            h2.hot__name
-              | Самое обсуждаемое
-              span.hot__icon.hot__icon--fire
             ul.hot__list
               each hotArticle in hotArticles
                 li.hot__list-item
                   a.hot__list-link(href="#")= truncate(hotArticle.announce, 100, true)
                     sup.hot__link-sup= hotArticle.commentscount
           else
-            h2.hot__name.hot__name--empty
-              | Самое обсуждаемое
-              span.hot__icon.hot__icon--fire
             p.hot__empty Здесь пока ничего нет...
         section.main-page__last.last
-          if comments
-            h2.last__name
-              | Последние комментарии
-              span.last__icon.last__icon--cloud
+          h2.last__name
+            | Последние комментарии
+            span.last__icon.last__icon--cloud
+          if latestComments
             ul.last__list
-              li.last__list-item
-                img.last__list-image(src="img/avatar-small-1.png" width="20" height="20" alt="Аватар пользователя")
-                b.last__list-name Анна Артамонова
-                a.last__list-link(href="#")
-                  | Сервис аренды жилья Airbnb стал глобальным партнером Международного
-                  | олимпийского комитета
-                  | (МОК) на девять лет, в течение которых пройдет пять Олимпиад, в том числе в Токио в 2020 году.
-              li.last__list-item
-                img.last__list-image(src="img/avatar-small-2.png" width="20" height="20" alt="Аватар пользователя")
-                b.last__list-name Александр Петров
-                a.last__list-link(href="#")
-                  | Главреды «Дождя», Forbes и других СМИ попросили Роскомнадзор
-                  | разъяснить штрафы за ссылки на
-                  | сайты с матом
-              li.last__list-item.last__list-item--end
-                img.last__list-image(src="img/avatar-small-3.png" width="20" height="20" alt="Аватар пользователя")
-                b.last__list-name Игорь Шманский
-                a.last__list-link(href="#")
-                  | Что-то все электрокары в последнее время все на одно лицо
-                  | делаются))
+              each comment in latestComments
+                li.last__list-item
+                  img.last__list-image(src="img/avatar-small-1.png" width="20" height="20" alt="Аватар пользователя")
+                  b.last__list-name Анна Артамонова
+                  a.last__list-link(href="#")= truncate(comment.text, 100, true)
           else
-            h2.last__name
-              | Последние комментарии
-              span.last__icon.last__icon--cloud
             p.last__empty Здесь пока ничего нет...
       section.main-page__list.preview
         h2.visually-hidden Список превью статей
