--- a/src/express/templates/common/article-preview.pug
+++ b/src/express/templates/common/article-preview.pug
@@ -8,7 +8,7 @@ li(class=`preview__item ${article.picture ? `` : `preview__item--noimage`}`)
       img.preview__background-image(src=`/img/${article.picture}@1x.jpg` width="460" height="240" srcset=`/img/${article.picture}@1x.jpg 1x, /img/${article.picture}@2x.jpg 2x` alt=`${article.title}`)
   time.preview__time(datetime=`${article.createdDate}`)= new Date(article.createdDate).toLocaleDateString('ru')
   h3.preview__name
-    a.preview__name-link(href="#")= article.title
+    a.preview__name-link(href=`/articles/${article.id}`)= article.title
   p.preview__text= article.announce
   a.preview__comment(href="#")
     | Комментарии
