--- a/src/express/templates/common/categories-list.pug
+++ b/src/express/templates/common/categories-list.pug
@@ -1,10 +1,4 @@
 ul.themes
   each category in categories
     if category.count > 0
-      li.themes__item
-        if headCategory && headCategory.name === category.name
-          a.themes__item-link.themes__item-link--active= category.name
-            sup= ` ${category.count}`
-        else
-          a.themes__item-link(href=`/articles/category/${category.id}`)= category.name
-            sup= ` ${category.count}`
+      include ./category-link
