--- a/src/express/templates/pages/errors/400.pug
+++ b/src/express/templates/pages/errors/400.pug
@@ -1,6 +1,6 @@
 doctype html
 html(lang=`ru`)
-  include ../common/head
+  include ../../common/head
   body
     .wrapper-color
       header.header.header--error
@@ -14,6 +14,6 @@ html(lang=`ru`)
         section.error
           h2.error__title.title.title--big Похоже, ошиблись адресом
           a.error__link.text.text--big(href=`/`) Вернуться на главную
-      include ../layout/footer
+      include ../../layout/footer
 
 
