--- a/src/express/templates/pages/errors/500.pug
+++ b/src/express/templates/pages/errors/500.pug
@@ -1,6 +1,6 @@
 doctype html
 html(lang=`ru`)
-  include ../common/head
+  include ../../common/head
   body
     .wrapper-color
       header.header.header--error
@@ -17,4 +17,4 @@ html(lang=`ru`)
             | Причин может быть много: сервер не выдержал нагрузку или в коде ошибка.
             | Попробуйте повторить попытку позже.
           a.error__link.text.text--big(href=`/`) Вернуться на главную
-      include ../layout/footer
+      include ../../layout/footer
