--- a/src/express/templates/pages/errors/500.pug
+++ b/src/express/templates/pages/errors/500.pug
@@ -5,7 +5,7 @@ html(lang=`ru`)
     .wrapper-color
       header.header.header--error
         a.header__logo.header__logo--500.logo(href=`/`)
-          img(src=`img/icons/logo.svg` alt=`логотип Тайпотеки`)
+          img(src=`/img/icons/logo.svg` alt=`логотип Типотеки`)
         a.header__registration(href=`/register`) Регистрация
         a.header__enter(href=`/login`) Вход с паролем
         a.header__search.button.button--search(href=`/search` aria-label=`поиск по сайту`)
