--- a/src/express/templates/common/head.pug
+++ b/src/express/templates/common/head.pug
@@ -8,3 +8,7 @@ head
   link(rel=`preload` href=`/fonts/Inter-Medium.woff2` as=`font` crossorigin=`anonymous`)
   link(rel=`preload` href=`/fonts/SFProDisplay-Regular.woff2` as=`font` crossorigin=`anonymous`)
   link(rel=`stylesheet` href=`/css/style.min.css`)
+  style.
+    a.pagination__item--active {
+      pointer-events: none;
+    }
