--- a/src/express/templates/layout/layout.pug
+++ b/src/express/templates/layout/layout.pug
@@ -18,6 +18,27 @@ html(lang=`ru`)
       const parseSearchResult = (str, query) => {
         return str.replace(query, `<b>${query}</b>`)
       }
+    mixin pagination(page, totalPages, width, prefix)
+      -
+        let start = page - width;
+        let end = page + width;
+        if (start < 1) {
+          end += 1 - start;
+          start = 1;
+        }
+        if (end > totalPages) {
+          start -= end - totalPages;
+          end = totalPages;
+        }
+        if (start < 1) {
+          start = 1;
+        }
+        let i = start - 1
+
+      if totalPages > 1
+        include ../common/pagination
+
+
     div(class=`${plainBackground ? 'wrapper-color' : 'wrapper'}`)
       include ./header
       block content
