--- a/src/express/templates/common/article-preview.pug
+++ b/src/express/templates/common/article-preview.pug
@@ -2,14 +2,14 @@ li(class=`preview__item ${article.picture ? `` : `preview__item--noimage`}`)
   ul(class=`preview__breadcrumbs` style=`flex-wrap: wrap;`)
     each category in article.categories
       li.preview__breadcrumbs-item
-        a.preview__breadcrumbs-link(href=`/articles/category/${category.id}`)= category.name
+        a.preview__breadcrumbs-link(href=`/articles/category/${category.id}`) #{category.name}
   if article.picture
     .preview__background
-      img.preview__background-image(src=`/img/${article.picture}@1x.jpg` width="460" height="240" srcset=`/img/${article.picture}@1x.jpg 1x, /img/${article.picture}@2x.jpg 2x` alt=`${article.title}`)
+      img.preview__background-image(src=`/img/${article.picture}` style="height: 240px" width="460" height="240" alt=`${article.title}`)
   time.preview__time(datetime=`${article.createdDate}`)= new Date(article.createdDate).toLocaleDateString('ru')
   h3.preview__name
-    a.preview__name-link(href=`/articles/${article.id}`)= article.title
-  p.preview__text= article.announce
+    a.preview__name-link(href=`/articles/${article.id}`) #{article.title}
+  p.preview__text #{article.announce}
   a.preview__comment(href="#")
     | Комментарии
     span.preview__cloud
