--- a/src/express/templates/pages/comments.pug
+++ b/src/express/templates/pages/comments.pug
@@ -11,7 +11,7 @@ block content
               img.publication__list-image(src=`/img/avatar-small-2.png` width=`20` height=`20` alt=`Аватар пользователя`)
               b.publication__list-name Александр Петров
               time.publication__item-time(datetime=`${comment.date}`)= comment.date
-            a.publication__item-text(href=`#`)= comment.text
+            a.publication__item-text(href=`#`) #{comment.text}
             p.publication__text-strong= comment.title
             button.publication__button.button.button--close-item(type=`button`)
               span.visually-hidden Закрыть строку списка
