--- a/src/express/templates/pages/my.pug
+++ b/src/express/templates/pages/my.pug
@@ -7,8 +7,8 @@ block content
       ul.notes__list
         each article in articles
           li.notes__list-item
-            time.notes__item-time(datetime=`${article.createdDate}`)= article.createdDate
-            a.notes__item-text(href=`#`)= article.title
+            time.notes__item-time(datetime=`${article.createdDate}`)= new Date(article.createdDate).toLocaleDateString()
+            a.notes__item-text(href=`/articles/edit/${article.id}`) #{article.title}
             button.notes__button.button.button--close-item(type=`button`)
               span.visually-hidden Закрыть строку списка
 
